Fixed: Submit button not being centred on mobile

--- a/site-sass/components/comments.scss
+++ b/site-sass/components/comments.scss
@@ -41,6 +41,7 @@
     margin: 0 auto;
     align-content: center;
     margin-bottom: 50px;
+    width: 100%;
   }
 
   .submit {
